--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,6 @@
 [package]
 name = "webssh"
 version = "0.1.0"
-publish = false
 edition = "2021"
 
 [lib]
@@ -9,7 +8,7 @@ crate-type = ["cdylib"]
 
 [profile.release]
 lto = true
-opt-level = "z"
+opt-level = "s"
 panic = "abort"
 codegen-units = 1
 
@@ -26,7 +25,7 @@ softbuffer = { version = "0.4.6", default-features = false }
 web-log = "1.0.1"
 
 [dependencies.os-terminal]
-version = "0.6.8"
+version = "0.6.9"
 default-features = false
 features = ["truetype"]
 
